# deepmind

./: .gitignore  README.md  docker-compose.yml
fastapi/: .env  .gitignore  config.py  main.py  pyproject.toml
fastapi/controller/: brain.py  chat.py  ingestion.py
fastapi/db/: database.py  postgres_example.sql  sql.py  sql_exmaple.sql
fastapi/services/: langchain_service.py
fastapi/services/documents/: __init__.py  chunker.py  processor.py
fastapi/services/ia/: openai_service.py
fastapi/services/nosql/: mongo.py
fastapi/services/vector/: pinecone_debug.py  pinecone_service.py
vue/: .env  README.md  package.json  pnpm-lock.yaml
vue/src/: App.vue  main.ts
vue/src/components/: Chat.vue  HelloWorld.vue
vue/src/services/: apiService.ts
vue/src/store/: index.ts
vuemind/: .gitignore  README.md  package-lock.json  package.json
vuemind/src/pages/: Chat.vue  index.js
vuemind/src/pages/Layout/: ChatForm.vue  DashboardLayout.vue
vuemind/src/routes/: routes.js
